--- a/template/WebPageEdit/popup_design.css
+++ b/template/WebPageEdit/popup_design.css
@@ -1,4 +1,4 @@
-.popup {
+.popup{
     display: none;
     position: fixed;
     top: 50%;
@@ -23,10 +23,15 @@
 }
 
 .listElem {
+    
     font-size: 50%;
 }
 
 /* individual setting */
 #popup1 {
+    width: 600px;
+}
+
+#popup2 {
     width: 600px;
 }
